2003-01-29  Daniel Morgan <danmorg@sc.rr.com>

	* doc/postgresql
	* doc/mysql
	* doc/ado-net: updates to web pages
	
	* man/sqlsharp.1: update to man page

2003-01-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: added WIN32_THREADS flag when building under windows.
	It seems that the header files of the gc do not always define it when
	GC_WIN32_THREADS is defined.

2003-01-26  Daniel Morgan <danmorg@sc.rr.com>

	* doc/index
	* doc/ado-net
	* doc/firebird
	* doc/ibmdb2
	* doc/mysql
	* doc/odbc
	* doc/oledb
	* doc/oracle
	* doc/postgresql
	* doc/sqlclient
	* doc/sqlite
	* doc/sybase
	* doc/tdsclient: corrections

2003-01-26  Duncan Mak  <duncan@ximian.com>

	* doc/jit-debug: Update the links. Thanks for Andy Oliver for the report.

2003-01-22  Martin Baulig  <martin@ximian.com>

	* configure.in: Set version number to 0.19.1.

	Heads up: I'm going to commit some changes to the debugger
	which'll require you to use this new runtime, so if you update the
	debugger from CVS, you also need this new runtime.

2003-01-20  Duncan Mak  <duncan@ximian.com>

	* configure.in: Bump the release number to 0.19.
	  
2003-01-19  Daniel Morgan <danmorg@sc.rr.com>

	* doc/ibmdb2: added file which is new web page
	about IBM DB2 data provider at Mono.Data.DB2Client
	
	* makefile
	* commands: added ibmdb2 web page to go-mono web site
	
	* doc/ado-net: added a couple more developers email, plus made the
	email spam resistant, added Mono's DB2 data provider to list,
	added more info about the ProviderFactory and retrieving data using
	ADO.NET from ASP.NET, add notes about testing, misc cleanup
	
	* doc/mysql
	* doc/postgresql
	* doc/sqlclient
	* doc/oracle
	* doc/tdsclient
	* doc/firebird
	* doc/oledb
	* doc/odbc
	* doc/sybase
	* doc/sqlite: added testing notes and C# examples
	
	* doc/gtk-sharp: added links for GTK# for Windows
	
	* man/sqlsharp.1: added providers Npgsql and MySQLNet

2003-01-17  Duncan Mak  <duncan@ximian.com>
